--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 DATABASE_URL=postgresql://neondb_owner:npg_3F0NErQWlyjn@ep-fragrant-haze-aduknc06-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 JWT_SECRET_KEY=mi_super_clave_secreta_1234
+SECURITY_PASSWORD_HASH = opbkdf2:sha256
+SECURITY_PASSWORD_SALT =fallback_salt_de_emergencia_largo
 CLOUDINARY_CLOUD_NAME=dgq3vomdw
 CLOUDINARY_API_KEY=547946875817387
 CLOUDINARY_API_SECRET=xv14IGX05dCH-JpV66TWVJDJn5o
