--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "core-js": "^3.8.3",
+    "jspdf": "^3.0.3",
     "router": "^2.2.0",
     "store": "^2.0.12",
     "vue": "^3.2.13",
