--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "axios": "^1.11.0",
     "core-js": "^3.8.3",
     "jspdf": "^3.0.3",
+    "moment": "^2.30.1",
     "router": "^2.2.0",
     "store": "^2.0.12",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
