Nuevo enpind que codigo generado para creditos,permiso del admin

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ CLOUDINARY_CLOUD_NAME=dgq3vomdw
 CLOUDINARY_API_KEY=547946875817387
 CLOUDINARY_API_SECRET=xv14IGX05dCH-JpV66TWVJDJn5o
 CLOUDINARY_URL=cloudinary://547946875817387:xv14IGX05dCH-JpV66TWVJDJn5o@dgq3vomdw
+SECRET_SEED = ADMIN_SECRET_SEED
