--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.1",
     "core-js": "^3.8.3",
     "jspdf": "^3.0.3",
     "moment": "^2.30.1",
     "router": "^2.2.0",
     "store": "^2.0.12",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.5.1",
     "vuex": "^4.0.2"
   },
