--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^3.0.3",
     "moment": "^2.30.1",
     "router": "^2.2.0",
+    "socket.io-client": "^4.8.1",
     "store": "^2.0.12",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.3",
